Replace collect to toList.